# blatt-7-aufgabe-1-team-frabjous

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
avltree/: CMakeLists.txt  avltree.cpp  avltree.h
test/: CMakeLists.txt  testTree.cpp  testTree.h
